<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00555151"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewBmiGroup"
        android:layout_width="120dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/bmi_group"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSlash"
        app:layout_constraintStart_toEndOf="@+id/textViewSlash" />

    <TextView
        android:id="@+id/textViewSlash"
        android:layout_width="38dp"
        android:layout_height="54dp"
        android:layout_marginTop="80dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/slash"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHeight" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="weight (kg)"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/height_text"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextWeight" />

    <TextView
        android:id="@+id/textViewBmiCount"
        android:layout_width="120dp"
        android:layout_height="54dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/bmi_count_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSlash"
        app:layout_constraintEnd_toStartOf="@+id/textViewSlash" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="#0B4D7C"
        android:text="@string/button_calculate"
        android:textColor="#EEF3F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSlash" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/button_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>